# CapybaraClicker

./: .env  .gitignore  Dockerfile  README.md  clicker-deployment.yaml  db-deployment.yaml  docker-compose.yml  pyproject.toml  run_app.sh  test
capybara-clicker/: app.py  main.py  models.py
capybara-clicker/api/: rest.py
capybara_clicker/: __init__.py  app.py  config.py  extensions.py  models.py  utils.py
capybara_clicker/api/: bp.py
capybara_clicker/capy_feed/: registry.py  utils.py
capybara_clicker/migrations/: env.py
capybara_clicker/migrations/versions/: 0a4ad8caa113_initil_migration.py  66652dcecb87_initial_migration.py  b6b4c4c1d007_initial_migration.py
capybara_clicker/models/: clicker.py  user.py
capybara_clicker/routes/: capybaras.py  login.py  main.py  users.py
capybara_clicker/routes/api/: __init__.py  clicks_api.py
capybara_clicker/templates/: error.html  index.html  login.html  register.html
docs/: migrations.md
