[project]
name = "capybara_clicker"
version = "0.1.0"
description = ""
authors = [
    {name = "stamplevskiyd",email = "stamplevskiyd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-script (>=2.0.6,<3.0.0)",
    "flask-login (>=0.6.3,<0.7.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
